# TensorrtInference

./: .gitignore  CMakeLists.txt  README.md  main.cpp
configs/: detectConfig.yaml
docs/: Opencv编译手册.md  测试报告.md
include/: common.h  postprocess.h  tensorrt_inference.h
src/: postprocess.cu  preprocess.cu  tensorrt_inference.cpp
utils/: draw.cpp  model.cpp
utils/include/: draw.hpp  model.hpp
